# CatalogueCanvas

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  coverage.yml  release.yml  scorecard.yml  security.yml
config/: catalog.toml.example  config.toml.example
llm_description/: build_prompt.py  describe.sh  describe_one.py  merge_entry.py  prompt.template.toml  read_llm_config.py
pipeline/: pyproject.toml
pipeline/src/catalogcanvas/: cli.py  config.py  db.py  ids.py  ingest.py
scripts/: coverage-to-codacy.sh
server/: pyproject.toml
server/scripts/: compress_existing_svgs.py
server/src/catalogcanvas/routers/: settings.py
server/src/cataloguecanvas/: auth.py  db.py  diagnostics.py  ingest.py  llm.py  main.py  settings.py  static_export.py  telemetry.py
server/src/cataloguecanvas/routers/: auth.py  collections.py  items.py  libraries.py  portfolios.py  settings.py  users.py
server/tests/: conftest.py  test_auth.py  test_convert.py  test_db.py  test_ids.py  test_llm.py  test_routers.py  test_static_export.py  test_telemetry.py  test_version.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: activity.tsx  appearance.test.tsx  appearance.tsx  auth.test.tsx  auth.tsx  client.test.ts  client.ts  selection.test.tsx
web/src/components/: ActivityTray.tsx  BulkToolbar.test.tsx  BulkToolbar.tsx  Footer.test.tsx  Footer.tsx  Icon.test.tsx  Icon.tsx  ItemCard.test.tsx  ItemCard.tsx  LLMButton.test.tsx  LLMButton.tsx  Lightbox.test.tsx  Lightbox.tsx  MetadataForm.test.tsx  MetadataForm.tsx  Nav.tsx  NotesPanel.tsx  Uploader.tsx  UsersPanel.tsx
web/src/pages/: CollectionEdit.tsx  Collections.test.tsx  Collections.tsx  Dashboard.test.tsx  Dashboard.tsx  ItemEdit.test.tsx  ItemEdit.tsx  Login.tsx  NotFound.test.tsx  PortfolioEdit.test.tsx  PortfolioEdit.tsx  Portfolios.test.tsx  Portfolios.tsx  Settings.test.tsx  Settings.tsx  Upload.tsx
web/src/portfolio/: Deck.test.tsx  Deck.tsx  deck.css
web/src/test/: coverage-per-file.sh
