[project]
name = "cataloguecanvas-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pillow>=10",
    "cairosvg>=2.7",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "passlib[argon2]>=1.7",
    "httpx>=0.27",
    "markdown>=3.6",
    "lz4>=4.3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "coverage[toml]>=7",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["cataloguecanvas"]
branch = true

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cataloguecanvas"]

[tool.hatch.build.targets.wheel.force-include]
"src/cataloguecanvas/wordlist.txt" = "cataloguecanvas/wordlist.txt"
"src/cataloguecanvas/prompt.template.toml" = "cataloguecanvas/prompt.template.toml"
